--- a/index.html
+++ b/index.html
@@ -7,5 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div>KOKONOI</div>
+    <p>
+      This is not a real online service! You know you need something like this
+      in your life to help you realize your deepest dreams. Sign up
+      <em>now</em> to get started.
+    </p>
+    <p>You know you want to.</p>
+
+    <h3>Let's do this!</h3>
+    <form action="#" method="post">
+      <label for="firstName">FIRST NAME</label>
+      <input type="text" name="name" id="firstName" required />
+
+      <label for="lastName">LAST NAME</label>
+      <input type="text" name="surname" id="lastName" required />
+
+      <label for="mail">EMAIL</label>
+      <input type="email" name="email" id="mail" required />
+
+      <label for="number">PHONE NUMBER</label>
+      <input type="number" name="phoneNumber" id="number" required />
+
+      <label for="pass">PASSWORD</label>
+      <input type="password" name="password" id="pass" required />
+
+      <label for="confirmPass">CONFIRM PASSWORD</label>
+      <input type="password" name="password" id="confirmPass" required />
+
+      <button type="submit">Create Account</button>
+    </form>
+    <p>Already have an account? <a href="#">Log in</a></p>
+  </body>
 </html>
