--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <div class="cont2-first">
         <p>
           This is not a real online service! You know you need something like
-          this in your life to help you realize your deepest dreams. Sign up
+          this in your life to help you realize your deepest dreams. <br>
+          Sign up
           <em>now</em> to get started.
         </p>
         <p>You know you want to.</p>
@@ -30,24 +31,42 @@
       <div class="cont2-second">
         <form action="#" method="post">
           <legend>Let's do this!</legend>
-          <label for="firstName">FIRST NAME</label>
-          <input type="text" name="name" id="firstName" required />
-          <label for="lastName">LAST NAME</label>
-          <input type="text" name="surname" id="lastName" required />
-          <label for="mail">EMAIL</label>
-          <input type="email" name="email" id="mail" required />
-          <label for="number">PHONE NUMBER</label>
-          <input type="number" name="phoneNumber" id="number" required />
-          <label for="pass">PASSWORD</label>
-          <input
-            type="password"
-            name="password"
-            id="pass"
-            minlength="8"
-            required
-          />
-          <label for="confirmPass">CONFIRM PASSWORD</label>
-          <input type="password" name="password" id="confirmPass" required />
+          <div class="form-cont">
+            <div class="form-input">
+              <label for="firstName">FIRST NAME</label>
+              <input type="text" name="name" id="firstName" required />
+            </div>
+            <div class="form-input">
+              <label for="lastName">LAST NAME</label>
+              <input type="text" name="surname" id="lastName" required />
+            </div>
+          </div>
+          <div class="form-cont" >
+            <div class="form-input">
+              <label for="mail">EMAIL</label>
+              <input type="email" name="email" id="mail" required />
+            </div>
+            <div class="form-input">
+              <label for="number">PHONE NUMBER</label>
+              <input type="number" name="phoneNumber" id="number" required />
+                        </div>
+            </div>
+          <div class="form-cont">
+            <div class="form-input">
+              <label for="pass">PASSWORD</label>
+              <input
+                type="password"
+                name="password"
+                id="pass"
+                minlength="8"
+                required
+              />
+            </div>
+            <div class="form-input">
+              <label for="confirmPass">CONFIRM PASSWORD</label>
+              <input type="password" name="password" id="confirmPass" required />
+            </div>
+          </div>
       </div>
         <div class="cont2-third">
           <button type="submit">Create Account</button>
