--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <script src="main.js" defer></script>
   </head>
   <body>
     <div class="container1">
@@ -34,21 +35,21 @@
           <div class="form-cont">
             <div class="form-input">
               <label for="firstName">FIRST NAME</label>
-              <input type="text" name="name" id="firstName" required />
+              <input type="text" name="name" id="firstName" placeholder=" " required />
             </div>
             <div class="form-input">
               <label for="lastName">LAST NAME</label>
-              <input type="text" name="surname" id="lastName" required />
+              <input type="text" name="surname" id="lastName" placeholder=" " required />
             </div>
           </div>
           <div class="form-cont" >
             <div class="form-input">
               <label for="mail">EMAIL</label>
-              <input type="email" name="email" id="mail" required />
+              <input type="email" name="email" id="mail" placeholder=" " required />
             </div>
             <div class="form-input">
               <label for="number">PHONE NUMBER</label>
-              <input type="number" name="phoneNumber" id="number" required />
+              <input type="number" name="phoneNumber" id="number" placeholder=" " required />
                         </div>
             </div>
           <div class="form-cont">
@@ -59,12 +60,13 @@
                 name="password"
                 id="pass"
                 minlength="8"
+                placeholder=" "
                 required
               />
             </div>
             <div class="form-input">
               <label for="confirmPass">CONFIRM PASSWORD</label>
-              <input type="password" name="password" id="confirmPass" required />
+              <input type="password" name="confirmPass" id="confirmPass" placeholder=" " required />
             </div>
           </div>
       </div>
